analize results
